--- a/index.html
+++ b/index.html
@@ -151,23 +151,25 @@
   <!-- About -->
   <section class="project-grids-3 py-5" id="about">
     <div class="about__title container py-md-5 py-3 text-center">
-      <div class="title">
-        <h6>ABOUT US</h6>
-        <h3>
-          We Love Your Pets Like They Are Our <br />
-          Own
-        </h3>
+      <div class="bottom-ab-grids align-items-center">
+        <div class="title">
+          <h6>ABOUT US</h6>
+          <h3>
+            We Love Your Pets Like They Are Our <br />
+            Own
+          </h3>
+        </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+          hic odio
+          voluptatem tenetur consequatur. Vestibulum ante ipsum primis in
+          faucibus orci luctus
+          et ultrices posuere cubilia Curae; Nulla mollis dapibus nunc, ut
+          rhoncus turpis
+          sodales quis.
+        </p>
+        <a href="#" class="read">Read More</a>
       </div>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-        hic odio <br />
-        voluptatem tenetur consequatur. Vestibulum ante ipsum primis in
-        faucibus orci luctus <br />
-        et ultrices posuere cubilia Curae; Nulla mollis dapibus nunc, ut
-        rhoncus turpis <br />
-        sodales quis.
-      </p>
-      <a href="#" class="read">Read More</a>
     </div>
   </section>
   <!-- End About -->
@@ -293,6 +295,8 @@
     </div>
   </section>
   <!-- End Services -->
+
+
 
   <!-- Video  -->
   <section class="w3l-index5" id="about">
@@ -493,7 +497,7 @@
     <div class="container py-md-4 py-3 text-center">
       <div class="row my-lg-4 mt-4">
         <div class="col-lg-9 col-md-10 mx-auto">
-          <div class="subcribe mx-auto">
+          <div class="subscribe mx-auto">
             <div class="title">
               <h3>Stay Updated!</h3>
               <p class="my-3">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
@@ -501,17 +505,121 @@
             </div>
             <form action="#" method="post" class="subscribe-wthree pt-2 mt-5">
               <div class="d-md-flex flex-wrap subscribe-wthree-field">
-                <input class="form-control" type="email" placeholder="Enter your email..." name="email" required> 
-                <button class="btn btn-primary" type="submit">Subscribe</button>
+                <input class="form-control" type="email" placeholder="Enter your email..." name="email" required>
+                <button class="btn btn-style btn-primary" type="submit">Subscribe</button>
               </div>
             </form>
           </div>
-
         </div>
       </div>
     </div>
   </section>
   <!-- End Bottom -->
+
+  <!-- Footer -->
+  <section class="footer">
+    <footer class="footer-39">
+      <div class="footer-bg-layer">
+        <div class="container py-lg-3">
+          <div class="row footer-top-39">
+            <div class="col-lg-6 col-md-5 footer-list-39 mt-5">
+              <h6 class="footer-title-39">Contact information</h6>
+              <ul>
+                <li>
+                  <p>
+                    <strong>Address</strong> : #135 block, Barnard St. Brooklyn, London 10036, UK
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    <strong>Phone</strong> : 
+                    <a href="tel:+(12)234-11-24">+(12)234-11-24</a>
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    <strong>Email</strong> : 
+                    <a href="mailto:example@mail.com">example@mail.com</a>
+                  </p>
+                </li>
+              </ul>
+              <div class="main-social-footer-39 mt-3">
+                <ul class="social-icons">
+                  <li class="facebook">
+                    <a href="#link" title="Facebook">
+                      <span class="fa fa-facebook" aria-hidden="true">
+                      </span>
+                    </a>
+                  </li>
+                  <li class="twitter">
+                    <a href="#link" title="Twitter">
+                      <span class="fa fa-twitter" aria-hidden="true">
+                      </span>
+                    </a>
+                  </li>
+                  <li class="dribbble"><a href="#link" title="Dribbble">
+                      <span class="fa fa-dribbble" aria-hidden="true">
+                      </span>
+                    </a></li>
+                  <li class="google"><a href="#link" title="Google">
+                      <span class="fa fa-google" aria-hidden="true">
+                      </span>
+                    </a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-7">
+              <div class="row">
+                <div class="col-sm-4 col-6 footer-list-39 mt-5">
+                  <h6 class="footer-title-39">Company</h6>
+                  <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Blog Posts</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Pricing</a></li>
+                  </ul>
+                </div>
+                <div class="col-sm-4 col-6 footer-list-39 mt-5">
+                  <h6 class="footer-title-39">Quick Links</h6>
+                  <ul>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Create account</a></li>
+                    <li><a href="#">Care Center</a></li>
+                    <li><a href="#">Site Feedback</a></li>
+                  </ul>
+                </div>
+                <div class="col-sm-4 footer-list-39 mt-5">
+                  <h6 class="footer-title-39">Support</h6>
+                  <ul>
+                    <li><a href="#">All Dogs</a></li>
+                    <li><a href="#">Care Advices</a></li>
+                    <li><a href="#">Care Support</a></li>
+                    <li><a href="#">Veterinary Help</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="mid-footer-39 align-center py-lg-4 py-3 mt-5">
+          <div class="container">
+            <p class="copy-footer-39 text-center">
+             © 2020 Pooch Care. All Rights Reserved. Design by 
+            <a href="https://w3layouts.com/">W3Layouts</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </section>
+  <!-- End Footer -->
+
+  <!-- Up To Top -->
+  <button onclick="topFunction()" id="movetop" title="Go to top" style="display: block;">
+    ⤴
+  </button>
+
+  <!-- End up to top -->
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -632,5 +740,4 @@
   </script>
   <!-- //script for tesimonials carousel slider -->
 </body>
-
 </html>
