--- a/Background white/index.html
+++ b/Background white/index.html
@@ -769,9 +769,42 @@
   <!-- End Footer -->
 
   <!-- Up To Top -->
-  <button onclick="topFunction()" id="movetop" title="Go to top" style="display: block;">
-    ⤴
-  </button>
+  <section class="w3l-footer">
+    <button onclick="topFunction()" id="movetop" title="Go to top" style="display: block;">
+      ⤴
+    </button>
+    <script>
+      // When the user scrolls down 20px from the top of the document, show the button
+      window.onscroll = function () {
+        scrollFunction()
+      };
+
+      function scrollFunction() {
+        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+          document.getElementById("movetop").style.display = "block";
+        } else {
+          document.getElementById("movetop").style.display = "none";
+        }
+      }
+
+      // When the user clicks on the button, scroll to the top of the document
+      function topFunction() {
+        document.body.scrollTop = 0;
+        document.documentElement.scrollTop = 0;
+      }
+    </script>
+    <!-- /move top -->
+  </section>
+  <!-- //footer-28 block -->
+  <!-- disable body scroll which navbar is in active -->
+  <script>
+    $(function () {
+      $('.navbar-toggler').click(function () {
+        $('body').toggleClass('noscroll');
+      })
+    });
+  </script>
+  </section>
   <!-- End up to top -->
 
   <!-- Optional JavaScript -->
